// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms / Label Disabled Story 1`] = `
<div
  className="rs"
>
  <label
    className="label label--disabled "
  >
    Label
  </label>
</div>
`;

exports[`Storyshots Forms / Label Main 1`] = `
<div
  className="rs"
>
  <label
    className="label "
  >
    Label
  </label>
</div>
`;

exports[`Storyshots Forms / Label Optional And Disabled 1`] = `
<div
  className="rs"
>
  <label
    className="label label--disabled "
  >
    Label
    <span
      className="label__optional"
    >
       (facultatif)
    </span>
  </label>
</div>
`;

exports[`Storyshots Forms / Label Optional Story 1`] = `
<div
  className="rs"
>
  <label
    className="label "
  >
    Label
    <span
      className="label__optional"
    >
       (facultatif)
    </span>
  </label>
</div>
`;
